Fix btn alignments

--- a/themes/default/styles.scss
+++ b/themes/default/styles.scss
@@ -255,6 +255,15 @@ a:active {
     margin-top: 0px;
     margin-bottom: 0px;
     font-size: 26px;
+    display: initial;
+  }
+
+  .download-buttons {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
